--- a/detail-product.html
+++ b/detail-product.html
@@ -592,6 +592,7 @@
     }
 
     // --- URL Detection: Legacy (?id=) ---
+    console.log("VERSION: STOCK-RESERVATION-Fix-V3 loaded");
     const params = new URLSearchParams(window.location.search);
     let productId = params.get("id");
     let productSlug = null;
