--- a/detail-product.html
+++ b/detail-product.html
@@ -592,7 +592,7 @@
     }
 
     // --- URL Detection: Legacy (?id=) ---
-    console.log("VERSION: STOCK-RESERVATION-Fix-V3 loaded");
+    console.log("VERSION: STOCK-RESERVATION-Fix-V4 loaded");
     const params = new URLSearchParams(window.location.search);
     let productId = params.get("id");
     let productSlug = null;
@@ -1037,6 +1037,22 @@
           itemName = `${finalProductName} (Diskon ${appliedCoupon.code})`;
         }
 
+        // --- DEBUG & FIX: Ensure IDs are present ---
+        // Prioritize: 1. Variable from this scope (if any) -> 2. Global Variable -> 3. Dataset
+        const finalProductId = productId || document.getElementById('order-form')?.dataset.productId || '';
+
+        console.log("DEBUG PAYLOAD VARS:", {
+          orderId,
+          productId: finalProductId,
+          globalProductId: productId,
+          datasetId: document.getElementById('order-form')?.dataset.productId
+        });
+
+        if (!finalProductId) {
+          alert("Error: Product ID lost. Refresh page.");
+          throw new Error("Product ID missing");
+        }
+
         const payload = {
           name: name,
           email: email,
@@ -1045,7 +1061,7 @@
           redirectUrl: `${window.location.origin}/detail-order.html?orderId=${orderId}`, // Use orderId for initial lookup, page will swap to invoiceId
           // New Fields for Stock Reservation
           orderId: orderId,
-          productId: productId || document.getElementById('order-form')?.dataset.productId,
+          productId: finalProductId, // Use ensured valuable
           variantId: isVariableProduct && selectedVariant ? selectedVariant.id : null,
           items: [
             {
