--- a/detail-order.html
+++ b/detail-order.html
@@ -689,7 +689,7 @@
       const invoiceId = displayedRef && displayedRef !== '...' && displayedRef !== '-' ? displayedRef : refId;
 
       if (invoiceId) {
-        window.location.href = `https://arufkuy.myr.id/invoices/${invoiceId}`;
+        window.location.href = `https://arufkuy.myr.id/invoice/${invoiceId}`;
       } else {
         alert("Invoice ID belum tersedia.");
       }
@@ -782,6 +782,7 @@
     window.viewInvoice = viewInvoice;
   </script>
 </body>
+
 
 
 </html>
