--- a/admin.html
+++ b/admin.html
@@ -1035,183 +1035,6 @@
     </div>
   </div>
 
-  <!-- Section Modal -->
-  <div id="section-modal"
-    class="fixed inset-0 z-[90] hidden items-center justify-center bg-black/80 backdrop-blur-sm p-4">
-    <div class="w-full max-w-lg rounded-3xl border border-white/10 bg-slate-900 p-8 shadow-glow">
-      <div class="flex justify-between items-center mb-6">
-        <h3 id="section-modal-title" class="text-xl font-bold">Tambah Section</h3>
-        <button onclick="closeSectionModal()" class="text-slate-400 hover:text-white">✕</button>
-      </div>
-      <form id="section-form" class="space-y-4">
-        <input type="hidden" id="section-id">
-        <div>
-          <label class="block text-xs font-medium text-slate-400 mb-1">Nama Section</label>
-          <input type="text" id="section-name" required
-            class="w-full rounded-xl border border-white/10 bg-slate-950/50 px-4 py-3 text-sm text-white focus:border-indigo-500 focus:outline-none"
-            placeholder="Contoh: Game Populer">
-        </div>
-        <div>
-          <label class="block text-xs font-medium text-slate-400 mb-1">Deskripsi</label>
-          <textarea id="section-desc" rows="2"
-            class="w-full rounded-xl border border-white/10 bg-slate-950/50 px-4 py-3 text-sm text-white focus:border-indigo-500 focus:outline-none resize-none"
-            placeholder="Deskripsi singkat section..."></textarea>
-        </div>
-        <div>
-          <label class="block text-xs font-medium text-slate-400 mb-1">Urutan</label>
-          <input type="number" id="section-order" value="0"
-            class="w-full rounded-xl border border-white/10 bg-slate-950/50 px-4 py-3 text-sm text-white focus:border-indigo-500 focus:outline-none"
-            placeholder="0">
-          <p class="text-xs text-slate-500 mt-1">Angka kecil akan tampil lebih dulu</p>
-        </div>
-        <div class="flex items-center gap-2">
-          <input type="checkbox" id="section-active" checked
-            class="w-4 h-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500">
-          <label for="section-active" class="text-sm text-slate-300">Aktif</label>
-        </div>
-        <div class="flex justify-end gap-3 pt-4">
-          <button type="button" onclick="closeSectionModal()"
-            class="rounded-xl border border-white/10 px-4 py-2 text-sm font-semibold text-slate-300 hover:bg-white/5">Batal</button>
-          <button type="submit"
-            class="rounded-xl bg-indigo-500 px-6 py-2 text-sm font-semibold text-white hover:bg-indigo-400">Simpan</button>
-        </div>
-      </form>
-    </div>
-  </div>
-
-  <!-- Popup Modal -->
-  <div id="popup-info-modal"
-    class="fixed inset-0 z-[90] hidden items-center justify-center bg-black/80 backdrop-blur-sm p-4">
-    <div
-      class="w-full max-w-lg rounded-3xl border border-white/10 bg-slate-900 p-8 shadow-glow max-h-[90vh] overflow-y-auto">
-      <div class="flex justify-between items-center mb-6">
-        <h3 id="popup-modal-title" class="text-xl font-bold">Tambah Popup</h3>
-        <button onclick="closePopupModal()" class="text-slate-400 hover:text-white">✕</button>
-      </div>
-      <form id="popup-form" class="space-y-4">
-        <input type="hidden" id="popup-id">
-        <div>
-          <label class="block text-xs font-medium text-slate-400 mb-1">Judul Popup</label>
-          <input type="text" id="popup-title" required
-            class="w-full rounded-xl border border-white/10 bg-slate-950/50 px-4 py-3 text-sm text-white focus:border-indigo-500 focus:outline-none"
-            placeholder="Contoh: Dapatkan Diskon 10%">
-        </div>
-        <div>
-          <label class="block text-xs font-medium text-slate-400 mb-1">Konten</label>
-          <textarea id="popup-content" rows="4" required
-            class="w-full rounded-xl border border-white/10 bg-slate-950/50 px-4 py-3 text-sm text-white focus:border-indigo-500 focus:outline-none resize-none"
-            placeholder="Tulis konten popup di sini...&#10;&#10;Gunakan kode: PROMO10&#10;Minimal pembelian Rp 15.000"></textarea>
-        </div>
-        <div class="grid grid-cols-2 gap-4">
-          <div>
-            <label class="block text-xs font-medium text-slate-400 mb-1">Tipe</label>
-            <select id="popup-type"
-              class="w-full rounded-xl border border-white/10 bg-slate-950/50 px-4 py-3 text-sm text-white focus:border-indigo-500 focus:outline-none">
-              <option value="coupon">Kupon</option>
-              <option value="announcement">Pengumuman</option>
-              <option value="info">Informasi</option>
-            </select>
-          </div>
-          <div>
-            <label class="block text-xs font-medium text-slate-400 mb-1">Frekuensi</label>
-            <select id="popup-frequency"
-              class="w-full rounded-xl border border-white/10 bg-slate-950/50 px-4 py-3 text-sm text-white focus:border-indigo-500 focus:outline-none">
-              <option value="always">Setiap Kunjungan</option>
-              <option value="daily">Sekali Sehari</option>
-              <option value="once">Sekali Saja</option>
-            </select>
-          </div>
-        </div>
-        <div>
-          <label class="block text-xs font-medium text-slate-400 mb-1">Warna Tema (Optional)</label>
-          <input type="color" id="popup-color" value="#6366f1"
-            class="w-full h-12 rounded-xl border border-white/10 bg-slate-950/50 cursor-pointer">
-        </div>
-        <div class="flex items-center gap-2">
-          <input type="checkbox" id="popup-active" checked
-            class="w-4 h-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500">
-          <label for="popup-active" class="text-sm text-slate-300">Aktif</label>
-        </div>
-        <div class="flex justify-end gap-3 pt-4">
-          <button type="button" onclick="closePopupModal()"
-            class="rounded-xl border border-white/10 px-4 py-2 text-sm font-semibold text-slate-300 hover:bg-white/5">Batal</button>
-          <button type="submit"
-            class="rounded-xl bg-indigo-500 px-6 py-2 text-sm font-semibold text-white hover:bg-indigo-400">Simpan</button>
-        </div>
-      </form>
-    </div>
-  </div>
-
-  <!-- Theme Modal -->
-  <div id="theme-modal"
-    class="fixed inset-0 z-[90] hidden items-center justify-center bg-black/80 backdrop-blur-sm p-4">
-    <div
-      class="w-full max-w-lg rounded-3xl border border-white/10 bg-slate-900 p-8 shadow-glow max-h-[90vh] overflow-y-auto">
-      <div class="flex justify-between items-center mb-6">
-        <h3 id="theme-modal-title" class="text-xl font-bold">Tambah Tema</h3>
-        <button onclick="closeThemeModal()" class="text-slate-400 hover:text-white">✕</button>
-      </div>
-      <form id="theme-form" class="space-y-4">
-        <input type="hidden" id="theme-id">
-        <div>
-          <label class="block text-xs font-medium text-slate-400 mb-1">Nama Tema</label>
-          <input type="text" id="theme-name" required
-            class="w-full rounded-xl border border-white/10 bg-slate-950/50 px-4 py-3 text-sm text-white focus:border-indigo-500 focus:outline-none"
-            placeholder="Contoh: Ramadan 2026">
-        </div>
-        <div class="grid grid-cols-2 gap-4">
-          <div>
-            <label class="block text-xs font-medium text-slate-400 mb-1">Tanggal Mulai</label>
-            <input type="date" id="theme-start" required
-              class="w-full rounded-xl border border-white/10 bg-slate-950/50 px-4 py-3 text-sm text-white focus:border-indigo-500 focus:outline-none">
-          </div>
-          <div>
-            <label class="block text-xs font-medium text-slate-400 mb-1">Tanggal Selesai</label>
-            <input type="date" id="theme-end" required
-              class="w-full rounded-xl border border-white/10 bg-slate-950/50 px-4 py-3 text-sm text-white focus:border-indigo-500 focus:outline-none">
-          </div>
-        </div>
-        <div>
-          <label class="block text-xs font-medium text-slate-400 mb-1">Efek Partikel</label>
-          <select id="theme-particle"
-            class="w-full rounded-xl border border-white/10 bg-slate-950/50 px-4 py-3 text-sm text-white focus:border-indigo-500 focus:outline-none">
-            <option value="none">Tidak Ada</option>
-            <option value="snow">Salju (Snowflakes)</option>
-            <option value="fireworks">Kembang Api</option>
-            <option value="lanterns">Lentera Terbang</option>
-            <option value="stars">Bintang Jatuh</option>
-            <option value="hearts">Hati</option>
-            <option value="leaves">Daun Gugur</option>
-          </select>
-        </div>
-        <div class="grid grid-cols-2 gap-4">
-          <div>
-            <label class="block text-xs font-medium text-slate-400 mb-1">Warna Utama</label>
-            <input type="color" id="theme-primary-color" value="#6366f1"
-              class="w-full h-12 rounded-xl border border-white/10 bg-slate-950/50 cursor-pointer">
-          </div>
-          <div>
-            <label class="block text-xs font-medium text-slate-400 mb-1">Warna Sekunder</label>
-            <input type="color" id="theme-secondary-color" value="#06b6d4"
-              class="w-full h-12 rounded-xl border border-white/10 bg-slate-950/50 cursor-pointer">
-          </div>
-        </div>
-        <div class="flex items-center gap-2">
-          <input type="checkbox" id="theme-active"
-            class="w-4 h-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500">
-          <label for="theme-active" class="text-sm text-slate-300">Aktifkan Secara Manual</label>
-          <span class="text-[10px] text-slate-500">(Jika mode manual)</span>
-        </div>
-        <div class="flex justify-end gap-3 pt-4">
-          <button type="button" onclick="closeThemeModal"
-            class="rounded-xl border border-white/10 px-4 py-2 text-sm font-semibold text-slate-300 hover:bg-white/5">Batal</button>
-          <button type="submit"
-            class="rounded-xl bg-indigo-500 px-6 py-2 text-sm font-semibold text-white hover:bg-indigo-400">Simpan</button>
-        </div>
-      </form>
-    </div>
-  </div>
-
   <!-- Toast Notification Container -->
   <div id="toast-container" class="fixed top-4 right-4 z-[9999] flex flex-col gap-3 pointer-events-none"></div>
 
@@ -3081,7 +2904,10 @@
             lanterns: 'Lentera',
             stars: 'Bintang',
             hearts: 'Hati',
-            leaves: 'Daun'
+            leaves: 'Daun',
+            crescent: 'Bulan Sabit',
+            ketupat: 'Ketupat',
+            confetti: 'Ulang Tahun'
           };
 
           const row = `
